# python-connectors

./: .env.example  .gitignore  LICENSE  README.md  debug_test.py  example.py  pyproject.toml  requirements-dev.txt  requirements.txt
connectors/: __init__.py  base.py  registry.py
connectors/api/: __init__.py
connectors/config/: __init__.py  loader.py  social_media.py  validator.py
connectors/data_lake/: __init__.py  s3.py
connectors/db/: __init__.py  mysql.py  postgresql.py  snowflake.py  sqlserver.py
connectors/exceptions/: __init__.py  connector_exceptions.py
connectors/messaging/: README.md  __init__.py  imap.py  oauth_utils.py  smtp.py
connectors/nosql/: __init__.py
connectors/social_media/: __init__.py  base_social.py  facebook.py  github.py  instagram.py  linkedin.py  tiktok.py  twitter.py  youtube.py
connectors/utils/: __init__.py  logger.py  metrics.py  retry.py
docs/: messaging_guide.md  social_media_guide.md
scripts/: example_config.py  example_github.py  example_github_config.py  example_gmail.py  example_imap.py  example_imap_search.py  example_logging.py  example_oauth_gmail.py  example_smtp.py  example_social_media.py  example_working.py  examples_db_connectors.py  simple_test.py  simple_test_v1.py  test_db_connectors.py  test_integration.py
tests/: __init__.py  test_base.py  test_connectors.py
tests/social_media/: __init__.py  test_facebook.py  test_github.py  test_instagram.py  test_linkedin.py  test_tiktok.py  test_twitter.py  test_youtube.py
